--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "chai": "~1.9.0",
     "grunt-coffeelint": "0.0.8",
     "mocha": "~1.17.1",
-    "coffee-script": "~1.7.1"
+    "coffee-script": "~1.7.1",
+    "grunt-codo": "~0.1.0"
   },
   "scripts": {
     "test": "mocha"
