--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "main": "dist/client.js",
   "dependencies": {
-    "irc-message": "~1.0.0"
+    "irc-message": "~1.0.0",
+    "irc-replies": "^2.0.1"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
