--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "main": "dist/client.js",
   "dependencies": {
+    "eventemitter2": "^0.4.14",
     "irc-message": "~1.0.0",
     "irc-replies": "^2.0.1"
   },
