--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^2.9.30",
     "eventemitter2": "^0.4.14",
+    "grunt-gh-pages": "^0.10.0",
     "irc-message": "~1.0.0",
     "irc-replies": "^2.0.1"
   },
