--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "node-irc-client",
-  "version": "0.0.4",
+  "name": "squelch-irc-client",
+  "version": "0.0.1",
   "description": "An IRC client for Node.js",
-  "homepage": "https://github.com/rahatarmanahmed/node-irc-client",
+  "homepage": "https://github.com/squelch-irc/squelch-client",
   "repository": {
     "type": "git",
-    "url": "git://github.com/rahatarmanahmed/node-irc-client.git"
+    "url": "git://github.com/squelch-irc/squelch-client.git"
   },
   "main": "dist/client.js",
   "dependencies": {
