--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "irc-colors": "^1.2.0",
     "irc-message": "~3.0.0",
     "irc-replies": "^2.0.1",
+    "lodash.clonedeep": "^3.0.1",
     "through2-map": "^2.0.0"
   },
   "devDependencies": {
