--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "bluebird": "^2.9.30",
     "eventemitter2": "^0.4.14",
-    "grunt-gh-pages": "^0.10.0",
     "irc-colors": "^1.2.0",
     "irc-message": "~3.0.0",
     "irc-replies": "^2.0.1",
@@ -25,8 +24,7 @@
     "chai": "~1.9.0",
     "grunt-coffeelint": "0.0.8",
     "mocha": "~1.17.1",
-    "coffee-script": "~1.7.1",
-    "grunt-codo": "~0.1.0"
+    "coffee-script": "~1.7.1"
   },
   "scripts": {
     "test": "grunt test",
