--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "squelch-irc-client",
+  "name": "squelch-client",
   "version": "0.2.0",
   "description": "An IRC client for Node.js",
   "homepage": "https://github.com/squelch-irc/squelch-client",
