--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "through2-map": "^2.0.0"
   },
   "devDependencies": {
+    "chai": "~1.9.0",
+    "coffee-script": "~1.7.1",
     "grunt": "~0.4.2",
+    "grunt-coffeelint": "0.0.8",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-mocha-test": "~0.8.1",
-    "chai": "~1.9.0",
-    "grunt-coffeelint": "0.0.8",
-    "mocha": "~1.17.1",
-    "coffee-script": "~1.7.1"
+    "mocha": "~1.17.1"
   },
   "scripts": {
     "test": "grunt test",
