--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
   },
   "main": "dist/client.js",
   "dependencies": {
-    "bluebird": "^2.9.30",
+    "bluebird": "^3.3.1",
     "debug": "^2.2.0",
-    "eventemitter2": "^0.4.14",
+    "eventemitter2": "^1.0.0",
     "irc-colors": "^1.2.0",
     "irc-message": "~3.0.0",
     "irc-replies": "^2.0.1",
-    "lodash.clonedeep": "^3.0.1",
+    "lodash.clonedeep": "^4.3.0",
     "through2-map": "^2.0.0"
   },
   "devDependencies": {
-    "chai": "~1.9.0",
-    "coffee-script": "~1.7.1",
+    "chai": "^3.5.0",
+    "coffee-script": "^1.10.0",
     "coffeelint": "^1.14.2",
-    "mocha": "~1.17.1",
-    "rimraf": "^2.5.0"
+    "mocha": "^2.4.5",
+    "rimraf": "^2.5.2"
   },
   "scripts": {
     "clean": "rimraf dist",
     "lint": "coffeelint src test",
     "pretest": "npm run lint",
-    "test": "mocha --compilers coffee:coffee-script/register test",
+    "test": "mocha",
     "prebuild": "npm run clean && npm run test",
     "build": "coffee -c -o dist src",
     "prepublish": "npm run build"
