Switched eventemitter2 with event-kit disposable emitter

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "main": "dist/client.js",
   "dependencies": {
+    "@rahatarmanahmed/event-kit": "^2.1.0-featureonce",
     "bluebird": "^3.3.1",
     "debug": "^2.2.0",
-    "eventemitter2": "^1.0.0",
     "irc-colors": "^1.2.0",
     "irc-message": "~3.0.0",
     "irc-replies": "^2.0.1",
